# project-vapor

./: .clang-format  .clang-tidy  .gitignore  ACTION_MANAGER.md  ANALYSIS.md  ARCHITECTURE.md  BACKEND_SPECIFIC_CALLS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  DECISION_RHI_BRANCH_STRATEGY.md  DESIGN.md  DESIGN_WORLD_SCENE_MANAGER.md  DEVELOPMENT.md  DEVLOG.md  ENKITS_INTEGRATION.md  FEATURES.md  FIX_PLAN.md  IMPLEMENTATION_SUMMARY.md  INPUT_SYSTEM_EVALUATION.md  JOLT_PHYSICS_IMPLEMENTATION.md  MERGE_README.md  MIGRATION_GUIDE.md  PHYSICS_API_REFERENCE.md  PROGRESS_UPDATE_2026-05-28.md  PR_DESCRIPTION.md  README.md  REEVALUATION.md  REFACTORING.md  RESOURCE_SYSTEM.md  RHI_ARCHITECTURE_ANALYSIS.html  RHI_DOCUMENTATION.md  RHI_INTEGRATION_PLAN.md  RHI_PHASE_PLAN.md  RHI_TRADEOFF_ANALYSIS.md  ROADMAP.md  SCENE_TRANSITIONS.md  TECHSTACK.md  TEST_BATCH_RENDERING.md  TRACY_INTEGRATION.md  (+8 more)
Examples/: CMakeLists.txt
Examples/MicroVoxel/: CMakeLists.txt  main.cpp
Examples/TerrainStreaming/: CMakeLists.txt  main.cpp
Examples/USDViewer/: CMakeLists.txt  main.cpp
Vapor/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp  asset_serializer.cpp  asset_serializer.hpp  async_asset_loader.cpp  async_asset_loader.hpp  camera.cpp  camera.hpp  engine_core.cpp  engine_core.hpp  graphics.cpp  graphics.hpp  helper.cpp  helper.hpp  jolt_enki_job_system.cpp  jolt_enki_job_system.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_builder.hpp  physics_3d.cpp  physics_3d.hpp  render_data.hpp  renderer.cpp  renderer.hpp  renderer_legacy.hpp  renderer_metal.cpp  renderer_metal.hpp  renderer_vulkan.cpp  renderer_vulkan.hpp  rhi.hpp  rhi_metal.cpp  rhi_metal.hpp  rhi_vulkan.cpp  rhi_vulkan.hpp  scene.cpp  scene.hpp  scene_renderer.cpp  scene_renderer.hpp  (+2 more)
Vapor/MikkTSpace/: CMakeLists.txt
Vapor/assets/shaders/: 2d_batch.metal  3d_ao_denoise.metal  3d_ao_temporal.metal  3d_atmosphere.metal  3d_blinn_phong.metal  3d_blinn_phong_normal_mapped.metal  3d_bloom_brightness.metal  3d_bloom_composite.metal  3d_bloom_downsample.metal  3d_bloom_upsample.metal  3d_brdf_lut.metal  3d_cluster_add_block_sums.metal  3d_cluster_build.metal  3d_cluster_build_compact.metal  3d_cluster_light_count.metal  3d_cluster_light_write.metal  3d_cluster_prefix_sum_block_sums.metal  3d_cluster_prefix_sum_blocks.metal  3d_common.metal  3d_csm_depth.metal  3d_debug.metal  3d_depth_only.metal  3d_dof_blur.metal  3d_dof_coc.metal  3d_dof_composite.metal  3d_equirect_to_cubemap.metal  3d_gpu_cull.metal  3d_gradient.metal  3d_grass.metal  3d_height_fog.metal  3d_hiz_reduce.metal  3d_ibl_equirect.metal  3d_irradiance_convolution.metal  3d_light_cull.metal  3d_light_scattering.metal  3d_meshlet.metal  3d_microvoxel.metal  3d_microvoxel_gi.metal  3d_motion_vector.metal  3d_normal_resolve.metal  (+155 more)
Vapor/assets/textures/: attribution.txt
Vapor/capi/: CMakeLists.txt
Vapor/capi/include/: VirgaNativeAPI.h
Vapor/capi/src/: capi.cpp
Vapor/cmake/: VaporMacros.cmake
Vapor/examples/: action_manager_example.cpp
Vapor/imgui/: imconfig.h
Vapor/include/Vapor/: action_manager.hpp  animation.hpp  animation_clip.hpp  animation_library.hpp  animation_loader.hpp  animator.hpp  asset_manager.hpp  asset_serializer.hpp  atlas_baker.hpp  audio_engine.hpp  batch2d.hpp  camera.hpp  camera_manager.hpp  cbt.hpp  character_controller.hpp  component_reflector.hpp  components.hpp  data_definition.hpp  debug_draw.hpp  definition.hpp  definition_database.hpp  easing.hpp  ecs_components.hpp  ecs_systems.hpp  engine_core.hpp  file_system.hpp  flipbook_system.hpp  fluid_volume.hpp  font_manager.hpp  fsm.hpp  fsm_system.hpp  gibs_manager.hpp  gibs_passes.hpp  graphics.hpp  graphics_batch2d.hpp  (+65 more)
Vapor/meshopt/: VENDOR.md
Vapor/metal/: CMakeLists.txt
Vapor/src/: action_manager.cpp  animation.cpp  animation_clip.cpp  animation_library.cpp  animation_loader.cpp  animator.cpp  asset_manager.cpp  asset_manager_usd.cpp  asset_serializer.cpp  atlas_baker.cpp  audio_engine.cpp  batch2d.cpp  camera.cpp  camera_manager.cpp  character_controller.cpp  debug_draw.cpp  easing.cpp  ecs_components.cpp  ecs_systems.cpp  engine_core.cpp  file_system.cpp  fluid_volume.cpp  font_manager.cpp  fsm.cpp  gibs_manager.cpp  gibs_passes.cpp  graphics.cpp  helper.cpp  input_manager.cpp  jolt_enki_job_system.cpp  meshlet_builder.cpp  model_serializer.cpp  physics_3d.cpp  physics_debug_renderer.cpp  render_scene.cpp  renderer.cpp  renderer_metal.cpp  renderer_vulkan.cpp  resource_manager.cpp  rhi_metal.cpp  (+26 more)
Vapor/stb/: stb_truetype.h
Vaporware/: .gitignore  CMakeLists.txt
Vaporware/gameplay/: CMakeLists.txt  gameplay_module.cpp
Vaporware/src/: action_components.hpp  action_system.hpp  action_systems.hpp  animation_components.hpp  animation_systems.hpp  blueprint_registrations.hpp  camera_manager.cpp  camera_manager.hpp  camera_mixing_system.hpp  camera_trauma_components.hpp  camera_trauma_system.hpp  components.hpp  examples.hpp  fsm_components.hpp  fsm_system.hpp  game.cpp  game.hpp  game_module.cpp  interactive_physics_demo.cpp  level_serializer.hpp  main.cpp  physics_demo.cpp  scene_builder.hpp  scene_inspector.hpp  scene_serializer.hpp  systems.hpp  timeline_asset.hpp  timeline_components.hpp  timeline_example.hpp  timeline_system.hpp
benchmarks/: CMakeLists.txt  fibonacci_benchmark.cpp
tests/: CMakeLists.txt  action_system_safeguard_test.cpp  action_system_test.cpp  asset_manager_test.cpp  asset_serializer_test.cpp  backend_screenshot_test.cpp  backend_support_test.cpp  camera_safeguard_test.cpp  cbt_test.cpp  ecs_transform_test.cpp  file_system_test.cpp  flipbook_test.cpp  fsm_system_test.cpp  meshlet_builder_test.cpp  model_serializer_test.cpp  particle_system_test.cpp  physics_safeguard_test.cpp  physics_test.cpp  resource_manager_safeguard_test.cpp  scene_blueprint_test.cpp  scene_transform_safeguard_test.cpp  scene_transform_test.cpp  terrain_texture_gen_test.cpp  terrain_tile_cache_test.cpp  terrain_world_test.cpp  timeline_system_test.cpp  ui_document_registry_test.cpp  ui_system_test.cpp  voxel_world_test.cpp
tools/vapor-asset/: CMakeLists.txt
(+162 files in other folders)
